apps/headlamp/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: headlamp
  labels:
    inject-ca-bundle: "true"
