apps/headlamp/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: headlamp
spec:
  parentRefs:
    - name: default
      namespace: gateway
      sectionName: headlamp
  hostnames:
    - headlamp.tomerhanochi.com
  rules:
    - backendRefs:
        - name: headlamp
          port: 80
